feat: add pattern-based bytecode patcher for character point caps
Remove all skill/attribute point allocation limits from Space Haven's
character creation screen. Patches 7 bytecode locations across 2 Java
class files, adds JVM verification bypass flags to config.json, and
manages backup/restore for clean toggling.

- Pattern-based method detection via Java constant pool parsing
- Auto-detects Steam installation paths
- CLI: spacehaven-cheat --enable/--disable/--status
- PyPI packaging with spacehaven-cheat entry point
- git-repokit-common subtree at scripts/ with hooks and versioning
- Banner art and full README with usage docs